fix: fixed scroll that was taking too long to scroll. Still to fix breakpoints on page scroll and image banner size.

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,7 @@
     perspective-origin: 0 0;
     overflow-x: hidden;
     height: 100%;
+    overflow-y: scroll;
   }
 
   body {
